ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Popup_Notification_view__c/Popup_Notification_view__c.object-meta.xml
<CustomObject>
    <label>Popup Notification view</label>
    <nameField>
        <displayFormat>popv-{000000}</displayFormat>
        <label>Popup Notification View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Popup Notification views</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>