ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Popup_Notification_view__c/fields/Do_not_show_again__c.field-meta.xml
<CustomField>
    <fullName>Do_not_show_again__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Show Again</label>
    <type>Checkbox</type>
</CustomField>