ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Popup_Notification_view__c/fields/Number_of_views__c.field-meta.xml
<CustomField>
    <fullName>Number_of_views__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Views</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>