ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Popup_Notification_view__c/fields/Popup_notification__c.field-meta.xml
<CustomField>
    <fullName>Popup_notification__c</fullName>
    <label>Popup Notification</label>
    <referenceTo>Popup_notification__c</referenceTo>
    <relationshipLabel>Popup Notification Views</relationshipLabel>
    <relationshipName>Popup_Notification_views</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>